Integrated NIO http code and tests into mule.